# backend

./: pyproject.toml
alunos/: admin.py  models.py  serializers.py  views.py
alunos/migrations/: 0001_initial.py  0002_cidade.py  0003_aluno.py
config/: settings.py  urls.py
